Make CommunityGrants with grant amounts equal to input returned

--- a/module-6-one-task-per-function/Solutions/Tutorial/One_Task_Per_Function_Tutorial_Solution.ipynb
+++ b/module-6-one-task-per-function/Solutions/Tutorial/One_Task_Per_Function_Tutorial_Solution.ipynb
@@ -233,7 +233,7 @@
     "    \"\"\"\n",
     "    #return False #stub\n",
     "    # template from CommunityGrant with additional parameter\n",
-    "    return cg.amt > i\n",
+    "    return cg.amt >= i\n",
     "\n",
     "@typecheck\n",
     "def from_city_only(city: str, locg: List[CommunityGrant]) -> List[CommunityGrant]:\n",
