Make CommunityGrants with grant amounts equal to input returned

--- a/module-6-one-task-per-function/Solutions/Tutorial/One_Task_Per_Function_Tutorial_Solution.ipynb
+++ b/module-6-one-task-per-function/Solutions/Tutorial/One_Task_Per_Function_Tutorial_Solution.ipynb
@@ -229,11 +229,11 @@
     "@typecheck\n",
     "def grant_bigger_than(i: int, cg: CommunityGrant) -> bool:\n",
     "    \"\"\"\n",
-    "    return True if cg has an amount greater than i and False otherwise\n",
+    "    return True if cg has an amount greater or equal than i and False otherwise\n",
     "    \"\"\"\n",
     "    #return False #stub\n",
     "    # template from CommunityGrant with additional parameter\n",
-    "    return cg.amt > i\n",
+    "    return cg.amt >= i\n",
     "\n",
     "@typecheck\n",
     "def from_city_only(city: str, locg: List[CommunityGrant]) -> List[CommunityGrant]:\n",
@@ -279,10 +279,10 @@
     "expect(bigger_than_only(85000, L1), [])\n",
     "\n",
     "expect(grant_bigger_than(3000, CHINESE_ORCHESTRA), True)\n",
-    "expect(grant_bigger_than(5000, CHINESE_ORCHESTRA), False)\n",
+    "expect(grant_bigger_than(5000, CHINESE_ORCHESTRA), True)\n",
     "expect(grant_bigger_than(10000, CHINESE_ORCHESTRA), False)\n",
     "expect(grant_bigger_than(29499, BMX), True)\n",
-    "expect(grant_bigger_than(29500, BMX), False)\n",
+    "expect(grant_bigger_than(29500, BMX), True)\n",
     "expect(grant_bigger_than(29501, BMX), False)\n",
     "\n",
     "expect(from_city_only(\"Burnaby\", []), []) \n",
